Removed the repository generation and implemented manual handling via pgx and added DTO
