# internal/handler/http/auth.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/b0shka/backend/internal/domain"
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 )
 
 func (h *Handler) initAuthRoutes(api *gin.RouterGroup) {
@@ -17,27 +18,31 @@ func (h *Handler) initAuthRoutes(api *gin.RouterGroup) {
 	}
 }
 
+type SendCodeRequest struct {
+	Email string `json:"email" binding:"required,email"`
+}
+
 // @Summary		User Send Code Email
 // @Tags			auth
 // @Description	send secret code to email user
 // @ModuleID		sendCodeEmail
 // @Accept			json
 // @Produce		json
-// @Param			input	body		domain.SendCodeRequest	true	"auth info"
+// @Param			input	body		SendCodeRequest	true	"auth info"
 // @Success		200		{string}	string			"ok"
 // @Failure		400		{object}	response
 // @Failure		500		{object}	response
 // @Failure		default	{object}	response
 // @Router			/users/auth/send-code [post]
 func (h *Handler) sendCodeEmail(c *gin.Context) {
-	var inp domain.SendCodeRequest
-	if err := c.BindJSON(&inp); err != nil {
+	var req SendCodeRequest
+	if err := c.BindJSON(&req); err != nil {
 		newResponse(c, http.StatusBadRequest, domain.ErrInvalidInput.Error())
 
 		return
 	}
 
-	err := h.services.Auth.SendCodeEmail(c, inp.Email)
+	err := h.services.Auth.SendCodeEmail(c, NewSendCodeEmailInput(req))
 	if err != nil {
 		newResponse(c, http.StatusInternalServerError, err.Error())
 
@@ -47,27 +52,38 @@ func (h *Handler) sendCodeEmail(c *gin.Context) {
 	c.Status(http.StatusOK)
 }
 
+type SignInRequest struct {
+	Email      string `json:"email" binding:"required,email"`
+	SecretCode string `json:"secret_code" binding:"required,len=6"`
+}
+
+type SignInResponse struct {
+	SessionID    uuid.UUID `json:"session_id"`
+	RefreshToken string    `json:"refresh_token"`
+	AccessToken  string    `json:"access_token"`
+}
+
 // @Summary		User SignIn
 // @Tags			auth
 // @Description	user sign in
 // @ModuleID		userSignIn
 // @Accept			json
 // @Produce		json
-// @Param			input	body		domain.UserSignIn	true	"sign in info"
-// @Success		200		{object}	domain.SignInResponse
+// @Param			input	body		SignInRequest	true	"sign in info"
+// @Success		200		{object}	SignInResponse
 // @Failure		400,401	{object}	response
 // @Failure		500		{object}	response
 // @Failure		default	{object}	response
 // @Router			/users/auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
-	var inp domain.SignInRequest
-	if err := c.BindJSON(&inp); err != nil {
+	var req SignInRequest
+	if err := c.BindJSON(&req); err != nil {
 		newResponse(c, http.StatusBadRequest, domain.ErrInvalidInput.Error())
 
 		return
 	}
 
-	res, err := h.services.Auth.SignIn(c, inp)
+	res, err := h.services.Auth.SignIn(c, NewSignInInput(req))
 	if err != nil {
 		if errors.Is(err, domain.ErrSecretCodeInvalid) || errors.Is(err, domain.ErrSecretCodeExpired) {
 			newResponse(c, http.StatusUnauthorized, err.Error())
@@ -80,11 +96,15 @@ func (h *Handler) signIn(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, domain.SignInResponse{
-		SessionID:    res.SessionID,
-		RefreshToken: res.RefreshToken,
-		AccessToken:  res.AccessToken,
-	})
+	c.JSON(http.StatusOK, NewSignInResponse(res))
+}
+
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token" binding:"required"`
+}
+
+type RefreshTokenResponse struct {
+	AccessToken string `json:"access_token"`
 }
 
 // @Summary		User Refresh Token
@@ -93,21 +113,21 @@ func (h *Handler) signIn(c *gin.Context) {
 // @ModuleID		refreshToken
 // @Accept			json
 // @Produce		json
-// @Param			input	body		domain.RefreshTokenRequest	true	"refresh info"
-// @Success		200			{object}	domain.RefreshTokenResponse
+// @Param			input	body		RefreshTokenRequest	true	"refresh info"
+// @Success		200			{object}	RefreshTokenResponse
 // @Failure		400,401,404	{object}	response
 // @Failure		500			{object}	response
 // @Failure		default		{object}	response
 // @Router			/users/auth/refresh [post]
 func (h *Handler) refreshToken(c *gin.Context) {
-	var inp domain.RefreshTokenRequest
-	if err := c.BindJSON(&inp); err != nil {
+	var req RefreshTokenRequest
+	if err := c.BindJSON(&req); err != nil {
 		newResponse(c, http.StatusBadRequest, domain.ErrInvalidInput.Error())
 
 		return
 	}
 
-	res, err := h.services.Auth.RefreshToken(c, inp.RefreshToken)
+	res, err := h.services.Auth.RefreshToken(c, NewRefreshTokenInput(req))
 	if err != nil {
 		if errors.Is(err, domain.ErrSessionNotFound) {
 			newResponse(c, http.StatusNotFound, err.Error())
@@ -130,7 +150,5 @@ func (h *Handler) refreshToken(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, domain.RefreshTokenResponse{
-		AccessToken: res.AccessToken,
-	})
+	c.JSON(http.StatusOK, NewRefreshTokenResponse(res))
 }
